# didkit-http

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  defaults.toml
.github/workflows/: cd.yml  ci.yml
src/: config.rs  credentials.rs  dids.rs  error.rs  identifiers.rs  keys.rs  main.rs  presentations.rs  status_list.rs  utils.rs
tests/: did-example-issuer.json  did-example-other-issuer.json  did-example-subject.json  did-issuer-dog.json  localConfig.cjs
