[package]
name = "didkit-http"
version = "0.4.0"
authors = ["Spruce Systems, Inc."]
edition = "2021"
description = "HTTP server for Verifiable Credentials and Decentralized Identifiers."
keywords = ["ssi", "did", "vc", "http", "api"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/spruceid/didkit-http"
repository = "https://github.com/spruceid/didkit-http"

exclude = ["/tests"]

[dependencies]
ssi = { version = "0.8.1", features = [
    "secp384r1",
    "bbs",
] }

anyhow = "1.0.70"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
figment = { version = "0.10.8", features = ["env", "toml"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace", "limit"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.9.0", features = ["json"] }
serde_urlencoded = "0.7"
iref = "3.1.2"
static-iref = "3.0"
url = { version = "2.3.1", features = ["serde"] }
percent-encoding = "2.2.0"

[dev-dependencies]
test-log = "0.2.16"
